fixed overflow friends

--- a/client/src/styles/Profile.module.css
+++ b/client/src/styles/Profile.module.css
@@ -5,7 +5,7 @@
   border: 1px solid whitesmoke;
   box-shadow: 0px 5px 7px 0px rgba(0, 0, 0, 0.24);
   transition: height 500ms ease;
-  margin: 5px;
+  margin-left: 5px;
   height: 176px;
   overflow-y: scroll;
   position: fixed;
