--- a/client/src/styles/Sidebar.module.css
+++ b/client/src/styles/Sidebar.module.css
@@ -2,6 +2,26 @@
   min-width: 300px;
   background-color: white;
   padding-right: 20px;
+  overflow: scroll;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.sidebar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.sidebar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firebox */
+}
+
+.header {
+  position: sticky;
+  top: 0;
+  padding-top: 1px;
+  z-index: 999;
+  background: white;
 }
 
 .addFriend {
@@ -37,6 +57,11 @@
 
 .container {
   display: flex;
+}
+
+.friends {
+  transition-timing-function: ease-in;
+  transition: all 0.5s;
 }
 
 @media only screen and (max-width: 700px) {
